--- a/app/src/main/res/layout/finalpage.xml
+++ b/app/src/main/res/layout/finalpage.xml
@@ -14,7 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hi, Student!"
-            android:textSize="24dp"
+            android:textSize="24sp"
             android:fontFamily="sans-serif-medium"/>
 
         <TextView
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="56dp"
             android:text="GPA:"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:fontFamily="sans-serif-medium"/>
 
         <TextView
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="Attendance:"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:fontFamily="sans-serif-medium"/>
 
         <TextView
@@ -39,7 +39,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
             android:text="Internals:"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:fontFamily="sans-serif-medium"/>
 
     </LinearLayout>
