--- a/app/src/main/res/layout/gpastudent.xml
+++ b/app/src/main/res/layout/gpastudent.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_margin="16dp">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="GPA:"
-        android:textSize="20dp"
+        android:text="GPA"
+        android:textSize="34sp"
         android:fontFamily="sans-serif-medium"/>
 
 </LinearLayout>
