--- a/app/src/main/res/layout/page2.xml
+++ b/app/src/main/res/layout/page2.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Check Result"
-        android:textSize="34dp"
+        android:textSize="34sp"
         android:layout_gravity="center_horizontal"
         android:fontFamily="sans-serif-medium" />
 
